[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>", "Natesh Narain <nnaraindev@gmail.com>"]
description = "Linux SocketCAN library. Send and receive CAN frames via CAN bus on Linux."
documentation = "https://docs.rs/socketcan-hal"
license = "MIT"
edition = "2018"
name = "socketcan-hal"
repository = "https://github.com/nnarain/socketcan-rs"
version = "3.0.0-alpha.2"

# Features:
#
# "netlink" (default) - Whether to include CAN interface configuration 
#        capabilities based on netlink kernel communications
# "utils" - Build command-line utilities
#

[features]
default = ["netlink"]
netlink = ["neli"]
vcan_tests = ["netlink"]
utils = ["clap", "anyhow"]

[dependencies]
embedded-hal = "1.0.0-alpha.8"
nb = "1"
byte_conv = "0.1.1"
hex = "0.4"
itertools = "0.10"
libc = "0.2"
nix = "0.23"
clap = { version = "2.33", optional = true }
anyhow = { version = "1.0", optional = true }
neli = { version = "0.6", optional = true }

[dev-dependencies]
anyhow = "1.0"
ctrlc = "3.2.2"
clap = {version = "3.2.8", features = ["derive"]}
nb = "1.0"

[[bin]]
name = "can"
required-features = ["utils"]
